--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body{background-color: rebeccapurple;
+body{color: white;
+    font-family: "Arial";
     background-image: url("img/back.png");
     background-size: auto;
+
 
 }
 
