--- a/style.css
+++ b/style.css
@@ -1,8 +1,92 @@
-body{color: white;
+html{
+    height: 100%;
+}
+
+body{
+    color: #e34e0a;
     font-family: "Arial";
     background-image: url("img/back.png");
-    background-size: auto;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    transition: 0.5s;
+    overflow-y: auto; /*Вертикальная полоса прокрутки для текста*/
+   height: 100%;
+justify-content: space-evenly;
+    font-size: 2vw;
+}
+p:hover{
+    transition: 0.2s;
+    color: #ff5000;
+    font-size:2.1vw ;
+}
+p{transition: 0.2s;
+font-size: 2vw;
+margin: 1vw;
+color: white}
 
+#list{
+    margin: 0 auto  ;
+    width: 60%;
+    height: 20vw;
+    overflow-y: auto;
+}
+#list img{
+
+    margin: 0 auto;
+    margin-top: 2vw;
+}
+input{
+    text-align: center;
+    color: #fffefe;
+    background: none;
+    border-radius: 5vw;
+    height: 3vw;
+    font-size: 2vw;
+}
+span{
+    color: #dce22b;
+}
+img{
+    width: 10%;
+    margin-top: 2vw;
+}
+div{display: flex;
+flex-direction: column;
+}
+
+.ignor{
+    flex-direction: row;
+    text-align: center;
+    display: block;
 
 }
 
+#list::-webkit-scrollbar {
+    width: 10px;
+}
+
+#list::-webkit-scrollbar-track {
+    -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+    background-color: #c1c1c1;
+    border-radius: 10px;
+    opacity: 90%;
+}
+
+#list::-webkit-scrollbar-thumb {
+    height: 30%;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #f3fb00, #b7480e);
+}
+@media (max-width: 760px) {
+    body{
+        font-size: 4vw;
+    }
+    input{
+        font-size: 3vw;
+        height: 5vw;
+    }
+}
