--- a/style.css
+++ b/style.css
@@ -1,64 +1,90 @@
-html{
+HTML {
     height: 100%;
 }
 
-body{
-    color: #e34e0a;
-    font-family: "Arial";
-    background-image: url("img/back.png");
-    background-size: cover;
+body {
+    padding-top: 1vw;
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 50%;
+    min-width: 45vh;
+    height: 95%;
+    color: #e34e0a;
+    font-family: 'Dosis', sans-serif;
+    background-image: url("img/back.png");
+    background-size: cover;
     margin: 0 auto;
-    text-align: center;
     transition: 0.5s;
-    overflow-y: auto; /*Вертикальная полоса прокрутки для текста*/
-   height: 100%;
-justify-content: space-evenly;
     font-size: 2vw;
 }
-p:hover{
+
+p:hover {
     transition: 0.2s;
     color: #ff5000;
-    font-size:2.1vw ;
-}
-p{transition: 0.2s;
-font-size: 2vw;
-margin: 1vw;
-color: white}
 
-#list{
-    margin: 0 auto  ;
-    width: 60%;
-    height: 20vw;
-    overflow-y: auto;
 }
-#list img{
 
-    margin: 0 auto;
-    margin-top: 2vw;
+p {
+    transition: 0.2s;
+    font-size: 2vw;
+    margin: 1vw;
+    color: white
 }
-input{
+
+
+input {
     text-align: center;
     color: #fffefe;
-    background: none;
-    border-radius: 5vw;
+    background-color: rgba(0, 0, 0, .6);
+    border-radius: 05vw;
     height: 3vw;
     font-size: 2vw;
+    width: 100%;
+    font-family: inherit;
 }
-span{
+
+span {
     color: #dce22b;
 }
-img{
+
+img {
     width: 10%;
     margin-top: 2vw;
 }
-div{display: flex;
-flex-direction: column;
+
+div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1vw;
 }
 
-.ignor{
+.wrapper {
+    display: flex;
+    justify-content: space-around;
+    height: 50%;
+}
+
+#list {
+    margin: 0 auto;
+    width: 60%;
+    height: auto;
+    overflow-y: auto;
+
+}
+
+#list img {
+    width: 15%;
+    min-width: 5vw;
+    margin: 0 auto;
+    margin-top: 5vw;
+}
+
+.find_song {
+    height: 50%;
+
+}
+
+.res {
     flex-direction: row;
     text-align: center;
     display: block;
@@ -79,14 +105,35 @@ flex-direction: column;
 #list::-webkit-scrollbar-thumb {
     height: 30%;
     border-radius: 10px;
-    background: linear-gradient(180deg, #f3fb00, #b7480e);
+    background: linear-gradient(180deg, #000000, #ff5400);
 }
+
 @media (max-width: 760px) {
-    body{
+    body {
         font-size: 4vw;
     }
-    input{
-        font-size: 3vw;
-        height: 5vw;
+
+    #list p {
+        padding-bottom: 1vw;
+        font-size: 4vw;
     }
+
+    input {
+        font-size: 4vw;
+        height: 7vw;
+    }
+}
+
+@media (max-width: 400px) {
+    body {
+        font-size: 5vw;
+    }
+
+    input {
+        font-size: 5vw;
+        height: 10vw;
+
+    }
+
+
 }
